ostoy-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostoy-microservice
  labels:
    app: ostoy
spec:
    selector:
      matchLabels:
        app: ostoy-microservice
    replicas: 1
    template:
      metadata:
        labels:
          app: ostoy-microservice
      spec:
        containers:
        - name: ostoy-microservice
          image: quay.io/ostoylab/ostoy-microservice:1.4.0
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
            protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: 18
#              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: ostoy-microservice-svc
  labels:
    app: ostoy-microservice
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: ostoy-microservice
