ostoy-fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostoy-frontend
  labels:
    app: ostoy
spec:
    selector:
      matchLabels:
        app: ostoy-frontend
    strategy:
      type: Recreate
    replicas: 1
    template:
      metadata:
        labels:
          app: ostoy-frontend
      spec:
        containers:
        - name: ostoy-frontend
          image: quay.io/ostoylab/ostoy-frontend:1.4.0
          imagePullPolicy: IfNotPresent
          ports:
          - name: ostoy-port
            containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
          volumeMounts:
          - name: configvol
            mountPath: /var/config
          - name: secretvol
            mountPath: /var/secret
          - name: datavol
            mountPath: /var/demo_files
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
        volumes:
          - name: configvol
            configMap:
              name: ostoy-configmap-files
          - name: secretvol
            secret:
              defaultMode: 420
              secretName: ostoy-secret
          - name: datavol
            persistentVolumeClaim:
              claimName: ostoy-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ostoy-frontend-svc
  labels:
    app: ostoy-frontend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: ostoy-port
      protocol: TCP
      name: ostoy
  selector:
    app: ostoy-frontend
---
apiVersion: v1
kind: Route
metadata:
  name: ostoy-route
spec:
  to:
    kind: Service
    name: ostoy-frontend-svc
